Adjusted config files

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,17 +9,7 @@
     "colors_background_1": "#FFFFFF",
     "colors_background_2": "#F3F3F3",
     "type_header_font": "assistant_n4",
-    "type_body_font": "assistant_n4",
-    "sections": {
-      "header": {
-        "type": "header",
-        "settings": {}
-      },
-      "footer": {
-        "type": "footer",
-        "settings": {}
-      }
-    }
+    "type_body_font": "assistant_n4"
   },
   "presets": {
     "Default": {
@@ -36,4 +26,3 @@
     }
   }
 }
-
